// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test RatingPanel set star and submit should work 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"centered":true,"open":true,"title":"👨‍🚀 Enjoy Beam Studio?"}
    </p>
    <div
      class="main-content"
    >
      <div>
        If you like Beam Studio, we would greatly appreciate it if you could rate us.
      </div>
      <div>
        Dummy Rate
        <button
          type="button"
        >
          change
        </button>
      </div>
      <div>
        Dummy Form
        <div>
          Dummy FormItem
          <p>
            label: 
            Don't show again
          </p>
          <div>
            Dummy Checkbox
            <p>
              checked: 
              false
            </p>
            <button
              type="button"
            >
              checkbox
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      ok
    </button>
    <button
      type="button"
    >
      cancel
    </button>
  </div>
</div>
`;

exports[`test RatingPanel set star and submit should work 2`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"centered":true,"open":true,"title":"👨‍🚀 Enjoy Beam Studio?"}
    </p>
    <strong>
      🙏
      Thank You!
    </strong>
    <button
      type="button"
    >
      ok
    </button>
    <button
      type="button"
    >
      cancel
    </button>
  </div>
</div>
`;

exports[`test RatingPanel should render correctly 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"centered":true,"open":true,"title":"👨‍🚀 Enjoy Beam Studio?"}
    </p>
    <div
      class="main-content"
    >
      <div>
        If you like Beam Studio, we would greatly appreciate it if you could rate us.
      </div>
      <div>
        Dummy Rate
        <button
          type="button"
        >
          change
        </button>
      </div>
      <div>
        Dummy Form
        <div>
          Dummy FormItem
          <p>
            label: 
            Don't show again
          </p>
          <div>
            Dummy Checkbox
            <p>
              checked: 
              false
            </p>
            <button
              type="button"
            >
              checkbox
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      ok
    </button>
    <button
      type="button"
    >
      cancel
    </button>
  </div>
</div>
`;

exports[`test RatingPanel toggle checkbox and cancel should work 1`] = `
<div>
  <div>
    Dummy Modal
    <p>
      props: 
      {"centered":true,"open":true,"title":"👨‍🚀 Enjoy Beam Studio?"}
    </p>
    <div
      class="main-content"
    >
      <div>
        If you like Beam Studio, we would greatly appreciate it if you could rate us.
      </div>
      <div>
        Dummy Rate
        <button
          type="button"
        >
          change
        </button>
      </div>
      <div>
        Dummy Form
        <div>
          Dummy FormItem
          <p>
            label: 
            Don't show again
          </p>
          <div>
            Dummy Checkbox
            <p>
              checked: 
              true
            </p>
            <button
              type="button"
            >
              checkbox
            </button>
          </div>
        </div>
      </div>
    </div>
    <button
      type="button"
    >
      ok
    </button>
    <button
      type="button"
    >
      cancel
    </button>
  </div>
</div>
`;
